# claude-cdc-demo

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  QUICKSTART_E2E_TESTS.md  README.md  docker-compose.yml  docker-compose.yml.backup  pyproject.toml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
compose/: README.md  docker-compose.yml
compose/base/: networks.yml  volumes.yml
compose/cdc/: cdc-init.yml  debezium.yml
compose/databases/: mysql.yml  postgres.yml
compose/observability/: alertmanager.yml  grafana.yml  loki.yml  prometheus.yml
compose/storage/: iceberg.yml  minio.yml  spark.yml
compose/streaming/: kafka.yml  schema-registry.yml  spark-delta-streaming.yml  spark-streaming.yml
docker/alertmanager/: alertmanager.yml
docker/cdc-init/: Dockerfile
docker/debezium/: Dockerfile  schema-registry-config.json
docker/iceberg-rest/: catalog-config.yaml
docker/minio/: init-buckets.sh
docker/mysql/: Dockerfile  init.sql
docker/observability/: alertmanager.yml  loki.yml  prometheus.yml  prometheus_alerts.yml
docker/postgres/: Dockerfile  init.sql
docker/spark/: spark-defaults.conf
docker/spark-streaming/: Dockerfile  README.md  entrypoint.sh
docs/: CDC_PIPELINE_IMPROVEMENTS.md  CDC_TEST_FIXES.md  E2E_TESTING.md  E2E_TESTS_SETUP_SUMMARY.md  E2E_TEST_STATUS.md  MYSQL_TO_DELTA_TEST_FIXES.md  NAMING_CONSISTENCY_FIX.md  PROJECT_COMPLETION.md  README-TESTING.md  SCHEMA_REGISTRY_IMPLEMENTATION_COMPLETE.md  SCHEMA_REGISTRY_INTEGRATION_PLAN.md  STREAMING_PIPELINES.md  STREAMING_PIPELINES_TROUBLESHOOTING.md  SWOT.md  VALIDATION_REPORT.md  architecture.md  cdc_approaches.md  cli_reference.md  test-fixes-session-report.md  troubleshooting.md
docs/api/: validation.md
docs/infrastructure/: delta-lake-setup.md  iceberg-setup.md
docs/pipelines/: cross_storage.md  deltalake.md  iceberg.md  mysql.md  postgres.md
scripts/: demo-delta-cdf.sh  init-delta-tables.sh  init-iceberg-tables.sh  kafka_to_delta_streaming.py  kafka_to_iceberg_streaming.py  monitor-schema-evolution.sh  orchestrate_streaming_pipelines.sh  register-mysql-connector.sh  register-postgres-connector-avro.sh  register-postgres-connector.sh  setup_debezium_connector.py  validate-monitoring.sh
scripts/connectors/: register-mysql-connector-avro.sh  register-mysql-connector.sh  register-postgres-connector.sh  setup_postgres_connector.py
scripts/demos/: demo-iceberg-snapshots.sh
scripts/e2e/: health_check.sh  start_test_infrastructure.sh  stop_test_infrastructure.sh
scripts/infrastructure/: init-all.sh
scripts/pipelines/: orchestrate_streaming_pipelines.sh  submit-spark-job.sh
scripts/storage/: init-delta-tables.sh  init-iceberg-tables.sh
specs/001-cdc-demo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-test-infrastructure/: IMPLEMENTATION_SUMMARY.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-infrastructure-expansion/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: __init__.py
src/cdc_pipelines/: __init__.py
src/cli/: __init__.py  main.py
src/common/: config.py  utils.py
src/data_generators/: __init__.py  generators.py
src/observability/: __init__.py  health.py  logging_config.py  metrics.py
src/validation/: __init__.py  integrity.py  lag_monitor.py  orchestrator.py  (+1 more)
tests/: conftest.py  test_utils.py
(+108 files in other folders)
